EBR-46, EP-3 done

--- a/templates/groupsystem/all_group.html
+++ b/templates/groupsystem/all_group.html
@@ -69,7 +69,7 @@
                 </div>
                 <div class="box-footer">
                     <div class="pull-right">
-                        {% bootstrap_pager all_groups %}
+                        {% bootstrap_paginate all_groups %}
                     </div>
                 </div>
             </div>
