--- a/templates/groupsystem/joined_group.html
+++ b/templates/groupsystem/joined_group.html
@@ -45,7 +45,7 @@
                 </div>
                 <div class="box-footer">
                     <div class="pull-right">
-                        {% bootstrap_pager joined_groups %}
+                        {% bootstrap_paginate joined_groups %}
                     </div>
                 </div>
             </div>
