--- a/templates/notification/notification.html
+++ b/templates/notification/notification.html
@@ -6,42 +6,42 @@
     {% for notification in notifications %}
         {% ifequal notification.notification_type 1 %}
             <li>
-                <a href="#">
+                <a href="{% url 'usertimeline:index' %}#{{notification.timeline_id}}">
                     <i class="fa fa-exchange text-blue"></i> {{ notification.sender }} {% trans "sent" %} {{ notification.amount }} {% trans "units" %}
                 </a>
             </li>
         {% endifequal %}
         {% ifequal notification.notification_type 2 %}
             <li>
-                <a href="#">
+                <a href="{% url 'usertimeline:index' %}#{{notification.timeline_id}}">
                     <i class="fa fa-exchange text-blue"></i> {{ notification.sender }} {% trans "requested" %} {{ notification.amount }} {% trans "units" %}
                 </a>
             </li>
         {% endifequal %}
         {% ifequal notification.notification_type 3 %}
             <li>
-                <a href="#">
+                <a href="{% url 'usertimeline:index' %}#{{notification.timeline_id}}">
                     <i class="fa fa-arrow-down text-orange"></i> {{ notification.amount }} {% trans "units released" %}
                 </a>
             </li>
         {% endifequal %}
         {% ifequal notification.notification_type 4 %}
             <li>
-                <a href="#">
+                <a href="{% url 'usertimeline:index' %}#{{notification.timeline_id}}">
                     <i class="fa fa-thumbs-o-up text-green"></i> {{ notification.sender }} {% trans "verfied as real user" %}
                 </a>
             </li>
         {% endifequal %}
         {% ifequal notification.notification_type 5 %}
             <li>
-                <a href="#">
+                <a href="{% url 'usertimeline:index' %}#{{notification.timeline_id}}">
                     <i class="fa fa-thumbs-o-down text-red"></i> {{ notification.sender }} {% trans "unverfied you" %}
                 </a>
             </li>
         {% endifequal %}
         {% ifequal notification.notification_type 6 %}
             <li>
-                <a href="#">
+                <a href="{% url 'usertimeline:index' %}#{{notification.timeline_id}}">
                     <i class="fa fa-user-plus text-green"></i> {{ notification.sender }} {% trans "sent a connection request" %}
                 </a>
             </li>
@@ -76,14 +76,14 @@
         {% endifequal %}
         {% ifequal notification.notification_type 11 %}
             <li>
-                <a href="#">
+                <a href="/g/group/{{ notification.group_id }}/">
                     <i class="fa fa-user-plus text-red"></i> {{ notification.sender }} {% trans "invited you to group" %} {{ notification.group_name }}
                 </a>
             </li>
         {% endifequal %}
         {% ifequal notification.notification_type 12 %}
             <li>
-                <a href="#">
+                <a href="/g/joinrequests/{{ notification.group_id }}">
                     <i class="fa fa-user-plus text-green"></i> {{ notification.sender }} {% trans "sent a join request to group" %} {{ notification.group_name }}
                 </a>
             </li>
