--- a/templates/publicusers/connusers.html
+++ b/templates/publicusers/connusers.html
@@ -7,19 +7,19 @@
         {% if users %}
         <ul class="users-list clearfix">
             {% for user in users %}
-                {% ifequal user.username request.user.username %} 
+                {% ifequal user.username request.user.username %}
                 {% else %}
                 <li>
                     {% if user.profile.avatar_public %}
                         {% if user.profile.avatar %}
-                            <a href="{% url 'publicusers:user' user.id %}"><img src="{{ user.profile.avatar.thumbnail.128x128 }}" alt="User Image"></a> 
+                            <a href="{% url 'publicusers:user' user.id %}"><img src="{{ user.profile.avatar.thumbnail.128x128 }}" alt="User Image"></a>
                         {% else %}
-                            <a href="{% url 'publicusers:user' user.id %}"><img src="{% static "dist/img/placeholder-user.png" %}" width="128" height="128"  alt="User Image"></a> 
-                        {% endif %} 
+                            <a href="{% url 'publicusers:user' user.id %}"><img src="{% static "dist/img/placeholder-user.png" %}" width="128" height="128"  alt="User Image"></a>
+                        {% endif %}
                     {% else %}
-                        <a href="{% url 'publicusers:user' user.id %}"><img src="{% static "dist/img/placeholder-user.png" %}" width="128" height="128" alt="User Image"></a> 
+                        <a href="{% url 'publicusers:user' user.id %}"><img src="{% static "dist/img/placeholder-user.png" %}" width="128" height="128" alt="User Image"></a>
                     {% endif %}
-                
+
                       <a class="users-list-name" href="{% url 'publicusers:user' user.id %}">{{ user.username }}</a>
                       <span class="users-list-date">{{ user.profile.street }}</span>
                 </li>
@@ -34,7 +34,7 @@
     </div>
     <div class="box-footer">
         <div class="pull-right">
-            {% bootstrap_pager users %}
+            {% bootstrap_paginate users %}
         </div>
     </div>
 </div>
