--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="//cdn.jsdelivr.net/emojione/2.2.6/assets/css/emojione.min.css"/>
     <link rel="stylesheet" href="https://cdn.rawgit.com/mervick/emojionearea/master/dist/emojionearea.min.css">
     <!-- Theme style -->
-    <link rel="stylesheet" href="{% static "dist/css/AdminLTE.css" %}">
+    <link rel="stylesheet" href="{% static "dist/css/AdminLTE.css" %}?n=1">
     <!-- AdminLTE Skins. Choose a skin from the css/skins
        folder instead of downloading all of them to reduce the load. -->
     <link rel="stylesheet" href="{% static "dist/css/skins/_all-skins.min.css" %}">
@@ -340,6 +340,32 @@
 
         <!-- Content Wrapper. Contains page content -->
         <div class="content-wrapper">
+            <section>
+                {% if UPDATES %}
+                    {% for update in UPDATES %}
+                        <div class="alert alert-{{ update.get_message_type_display }} sysalert">
+                            <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+                            <p>
+                                {% ifequal update.message_type '1' %}
+                                    <i class="fa fa-warning"></i>
+                                {% endifequal %}
+                                {% ifequal update.message_type '2' %}
+                                    <i class="fa fa-info-circle"></i>
+                                {% endifequal %}
+                                {% ifequal update.message_type '3' %}
+                                    <i class="fa fa-ban"></i>
+                                {% endifequal %}
+                                {% trans "System notice: " %}
+                                {% load tz %}
+                                {% localtime on %}
+                                    {{ update.timestamp|time:"h:i a" }}
+                                {% endlocaltime %}
+                                 - {{ update.message }}
+                            </p>
+                        </div>
+                    {% endfor %}
+                {% endif %}
+            </section>
             <section class="content-header">
                 {% block content_header %}
 
