--- a/templates/base.html
+++ b/templates/base.html
@@ -60,6 +60,8 @@
     <link rel="stylesheet" href="{% static "plugins/tagit/jquery.tagit.css" %}">
     <!-- Date Time Picker -->
     <link rel="stylesheet" href="{% static "plugins/bootstrap-datetimepicker/css/bootstrap-datetimepicker.min.css" %}">
+    <!-- PicEdit -->
+    <link rel="stylesheet" href="{% static "plugins/picedit/css/picedit.min.css" %}">
     <link rel="manifest" href="/manifest.json">
 
     <style>
@@ -553,6 +555,8 @@
     <script src="{% static "plugins/tagit/tag-it.js" %}"></script>
     <!-- Date time Picker -->
     <script src="{% static "plugins/bootstrap-datetimepicker/js/bootstrap-datetimepicker.min.js" %}"></script>
+    <!-- PicEdit -->
+    <script src="{% static "plugins/picedit/js/picedit.min.js" %}"></script>
     <!-- AdminLTE App -->
     <script src="{% static "dist/js/app.js" %}"></script>
     <!-- AdminLTE for demo purposes -->
