EP-163 EP-20 done

--- a/templates/invitationsystem/checkinvitation.html
+++ b/templates/invitationsystem/checkinvitation.html
@@ -1,15 +1,18 @@
 {% extends "landing_base.html" %}
-{% load staticfiles i18n bootstrap_tags %}
+{% load staticfiles i18n bootstrap_tags recaptcha2 %}
 {% block title %}
     Enter Invitation
+{% endblock %}
+{% block extrastyles %}
+    {% recaptcha_init %}
 {% endblock %}
 {% block content %}
     <section id="newshome">
         <div class="overlay">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-12 text-center">
-                        <div id="invitation-content">
+                    <div id="invitation-content">
+                        <div class="col-md-12 text-center">
                             <h1 class="newshome-header">{% trans "Get access to ekata beta" %}</h1>
                             {% if request.user.profile.invitation_verified %}
                                 <p>
@@ -17,12 +20,12 @@
                                 </p>
                                 <a style="color:#fff;" href="{% url 'dashboard:index' %}">Click here to go to dashboard</a>
                             {% else %}
-                            <form action="{% url 'invitationsystem:addinvitation' %}" method="POST" class="form-horizontal">
-                                {% csrf_token %}
-                                {{ form|as_bootstrap }}
-                                <button type="submit" name="button" class="btn btn-primary">{% trans "Submit" %}</button>
-                            </form>
-                            <a style="color: #fff; margin-top:20px;" href="{% url 'invitationsystem:index' %}">Click here to get an invitation id</a>
+                                <form action="{% url 'invitationsystem:addinvitation' %}" method="POST">
+                                    {% csrf_token %}
+                                    {{ form|as_bootstrap }}
+                                    <button type="submit" name="button" class="btn btn-primary">{% trans "Submit" %}</button>
+                                </form>
+                                <a style="color: #fff; margin-top:20px;" href="{% url 'invitationsystem:index' %}">Click here to get an invitation id</a>
                             {% endif %}
                         </div>
                     </div>
