--- a/templates/profilesystem/index.html
+++ b/templates/profilesystem/index.html
@@ -901,7 +901,9 @@
         */
         {% endcomment %}
         $('#avatarimage').picEdit({
-            defaultImage: "{{ request.user.profile.avatar.url }}",
+            {% if request.user.profile.avatar %}
+                defaultImage: "{{ request.user.profile.avatar.url }}",
+            {% endif %}
             formSubmitted: function (data){
                 var date = new Date();
                 $(".useravatar").attr('src', data.responseText + "?" + date.toString());
