--- a/templates/invitationsystem/invitationemail.html
+++ b/templates/invitationsystem/invitationemail.html
@@ -1,7 +1,7 @@
 <p>
     Hello, Welcome to ekata beta test
 </p>
-<p>invitation id: {{ invitation_id }}</p>
+<p>invitation key: {{ invitation_id }}</p>
 <p>
     Please go <a href="{{ registration_url }}">here</a> to register
 </p>
