--- a/templates/invitationsystem/sent.html
+++ b/templates/invitationsystem/sent.html
@@ -10,9 +10,9 @@
                 <div class="row">
                     <div class="col-md-12 text-center">
                         <div id="invitation-content">
-                            <h1 class="newshome-header">{% trans "Get access to ekata beta" %}</h1>
+                            <h1 class="newshome-header">{% trans "Get your invite access key to the ekata beta" %}</h1>
                             <p>
-                                {% trans "Your request is sent!! You will get an invitation id soon" %}
+                                {% trans "Your request is sent!! You will get an invitation email soon with a link and invite key." %}
                             </p>
                         </div>
                     </div>
